--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,22 @@
+:root {
+  --text-color: #142d4c;
+  --light-color: #ececec;
+  --alt-light-color: #e7eaf6;
+  --medium-color: #385170;
+  --dark-color: #142d4c;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  font-size: 20px;
+
+  color: var(--text-color);
+  background-color: var(--alt-light-color);
 }
 
 a {
