--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
 
 html,
 body {
+  display: flex;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
