--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
 html,
 body {
   display: flex;
+  min-width: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
